<resources>
    <string name="app_name">EnNos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="scan">Scan</string>
    <string name="scanningApplications">Scanning Applications</string>
    <string name="appIcon">App icon</string>
    <string name="stop">STOP</string>
    <string name="project_version">v1.0</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="share">Share</string>
    <string name="help_goodware">Safe: The prediction score is less than 0.5.</string>
    <string name="help_malware">Dangerous: The prediction score is greater than 0.75.</string>
    <string name="help_risky">Risky: The prediction score is between 0.5 and 0.75.</string>
    <string name="help_unknown">Unknown: We cannot determine the type of the application.</string>
    <string name="uninstall">Uninstall</string>
    <string name="sysapps_alert"><u>Note:</u> The scan system apps feature is included for experimental purpose only. We really do not recommend enabling it as it may show lot of false positives.</string>
    <string name="emptystring" />
    <string name="percent_start">0%</string>
    <string name="real_time_scan_desc">Real Time Scan is a feature that enables the anti-malware application to detect new app installations on the device and scan them. If enabled, the anti-malware app can automatically scan newly installed applications. You can enable/disable this feature in settings. This feature is enabled by default.</string>
    <string name="how_it_works_desc">EnNos uses permissions and intent-filters to detect malicious apps. While scanning, it loads the machine learning model and extracts permissions and intents from the installed applications on your device. These extracted features are then fed to the machine learning model in the form of a vector. The machine learning model returns a prediction score between 0 and 1 that denote the degree of maliciousness of the scanned application. We use this score to classify the scanned app into one of the following categories:</string>
    <string name="project_description">EnNos is an attempt to detect malwares in Android devices by utilizing machine learning approach.</string>
    <string name="what_is_EnNos">* What is EnNos?</string>
    <string name="what_is_real_time_scan">* What is Real Time Scan?</string>
    <string name="how_it_works">* How it works?</string>
    <string name="what_is_scan_system_apps_feature">* What does Scan System Apps feature mean?</string>
    <string name="scan_system_apps_desc">Scan system apps is a feature that tells the anti-malware application to analyze system applications also. You can enable/disable this feature in settings. This feature is disabled by default.</string>
    <string name="logo">Logo</string>
    <string name="iconDescription">Icon</string>
    <string name="permission_list">Permissions List</string>
    <string name="app_details">APP DETAILS</string>
    <string name="scanning">SCANNING</string>
    <string name="report">REPORT</string>
    <string name="no_permissions_required">No permissions required!</string>
    <string name="prediction_score">Prediction Score :</string>
    <string name="dangerous">Dangerous</string>
    <string name="safe">Safe</string>
    <string name="risky">Risky</string>
    <string name="unknown">Unknown</string>
    <string name="scan_now">SCAN NOW</string>
    <string name="settings_title">SETTINGS</string>
    <string name="help_title">HELP</string>
    <string name="app_settings">App Settings</string>
    <string name="real_time_scan">Real Time Scan</string>
    <string name="real_time_scan_summary">Automatically scan new apps</string>
    <string name="scan_system_apps">Scan System Apps (Error-prone)</string>
    <string name="scan_system_apps_summary">Include system apps while scanning \n(Not recommended)</string>
    <string name="help_and_support">Help &amp; Support</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="rate_this_app_summary">Give us feedback</string>
    <string name="app_version_text">App Version</string>
    <string name="system_app">System App</string>
    <string name="uninstall_successful">Uninstall Successful!</string>
    <string name="last_scan">Last Scan:</string>
    <string name="never">Never</string>
    <string name="scan_system_apps_toast">System apps will be included while scanning</string>
    <string name="dark_mode_enabled_toast">Dark Mode is Enabled</string>
    <string name="dark_mode_disabled_toast">Dark Mode is Disabled</string>
    <string name="real_time_scan_on">Real Time Scan is On</string>
    <string name="is">\u0020is\u0020</string>
    <string name="permission_info">Permission Info</string>
    <string name="no_description_found">No description found</string>
    <string name="notice">⚠️⚠️ PLEASE BE AWARE THAT EnNos IS STILL IN ITS EARLY STAGES OF DEVELOPMENT AND MAY CONTAIN A LOT OF FALSE POSITIVES IN PREDICTION. THIS PROJECT IS DEVELOPED FOR EDUCATIONAL PURPOSES ONLY AND WE MAKE NO GUARANTEE THAT THE OUTPUT PRODUCED BY EnNos IS ABSOLUTELY CORRECT. SO PLEASE DO NOT JUDGE OTHER APPLICATIONS USING THE OUTPUT OF EnNos ALONE.⚠️⚠️</string>
    <string name="scan_apk">Scan APK</string>
    <string name="permission_denied_message">Permission is required for getting list of files</string>
    <string name="select_a_file">Select a File</string>
    <string name="file_does_not_exist">File does not exist</string>
    <string name="error_loading_file">Error loading file</string>
    <string name="sha256_hash" translatable="false">SHA256 Hash</string>
    <string name="sample_text" translatable="false">Sample</string>
    <string name="custom_scan">Custom Scan</string>
    <string name="sponsor">Sponsor</string>
</resources>