<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/app_settings"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:defaultValue="true"
            android:key="realTime"
            android:summary="@string/real_time_scan_summary"
            android:title="@string/real_time_scan"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="includeSystemApps"
            android:summary="@string/scan_system_apps_summary"
            android:title="@string/scan_system_apps"
            app:iconSpaceReserved="false" />
        <!--<SwitchPreference
            android:defaultValue="true"
            android:key="darkMode"
            android:summary="@string/dark_mode_summary"
            android:title="@string/dark_mode"
            app:iconSpaceReserved="false" />-->
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/help_and_support"
        app:iconSpaceReserved="false">
        <Preference
            android:summary="@string/rate_this_app_summary"
            android:title="@string/rate_this_app"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://forms.gle/6ZHmfgTsQGEhHEyn9" />
        </Preference>
        <Preference
            android:summary="@string/app_version"
            android:title="@string/app_version_text"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</PreferenceScreen>