<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/whitesmoke">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2.5dp"
            android:text="@string/what_is_EnNos"
            android:textColor="@color/secondaryTextColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/project_description"
            android:textColor="@color/secondaryTextColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2.5dp"
            android:text="@string/what_is_real_time_scan"
            android:textColor="@color/secondaryTextColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/real_time_scan_desc"
            android:textColor="@color/secondaryTextColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2.5dp"
            android:text="@string/what_is_scan_system_apps_feature"
            android:textColor="@color/secondaryTextColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/scan_system_apps_desc"
            android:textColor="@color/secondaryTextColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2.5dp"
            android:text="@string/how_it_works"
            android:textColor="@color/secondaryTextColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/how_it_works_desc"
            android:textColor="@color/secondaryTextColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2.5dp"
            android:text="@string/help_goodware"
            android:textColor="#008000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2.5dp"
            android:text="@string/help_malware"
            android:textColor="#FF0000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2.5dp"
            android:text="@string/help_risky"
            android:textColor="#FFA500" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2.5dp"
            android:text="@string/help_unknown"
            android:textColor="#0080FF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sysapps_alert"
            android:textColor="@color/secondaryTextColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/notice"
            android:textColor="@color/secondaryTextColor" />
    </LinearLayout>
</ScrollView>